# esp32-simple-remote-controller

./: .gitignore  CMakeLists.txt  README.md  VERIFICATION_REPORT.md  app_config.yml  secrets.local.yml  secrets.template.yml
components/EC11_Encoder/: CMakeLists.txt
components/EC11_Encoder/inc/: ec11_encoder.hpp
components/EC11_Encoder/src/: ec11_encoder.cpp
docs/: ARCHITECTURE.md  DEVICE_DEVELOPMENT.md  HARDWARE_SETUP.md  PROTOCOL.md
main/: CMakeLists.txt  button.cpp  button.hpp  config.hpp  main.cpp  settings.cpp  settings.hpp
main/devices/: device_base.cpp  device_base.hpp  device_registry.cpp  device_registry.hpp  fatigue_tester.cpp  fatigue_tester.hpp  mock_device.cpp  mock_device.hpp
main/menu/: menu_items.cpp  menu_items.hpp  menu_system.cpp  menu_system.hpp
main/protocol/: device_protocols.hpp  espnow_peer_store.cpp  espnow_peer_store.hpp  espnow_protocol.cpp  espnow_protocol.hpp  espnow_security.hpp
main/ui/: ui_controller.cpp  ui_controller.hpp  ui_state.hpp
